# stm32wb55

./: .gdbinit  .gitignore  .travis.yml  Cargo.toml  README.md  clippy.toml  memory.x
.cargo/: config
examples/: ble.rs  eddystone_alt.rs  eddystone_beacon.rs  ibeacon.rs  ibeacon_alt.rs  transparent_mode.rs
src/: cb.rs  lib.rs  opcode.rs
src/command/: gap.rs  gatt.rs  hal.rs  l2cap.rs  mod.rs
src/event/: command.rs  mod.rs
