[package]
edition = "2018"
name = "stm32wb55"
version = "0.1.0"
authors = ["eupn <eupn@protonmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Interface to STM32WB55 Bluetooth radios"
keywords = ["spi", "bare-metal", "embedded-hal-driver"]
license = "MIT/Apache-2.0"
repository = "https://github.com/eupn/stm32wb55"
readme = "README.md"

[features]
# This library is used on a STM32WB5x application controller (Cortex-M4F).
# The library will take over IPCC and mailbox peripherals for low-level communication.
default = ["stm32wb-hal/rt"]

[dependencies]
stm32wb-hal = "0.1.0"
nb = "0.1.1"
bluetooth-hci = { git = "https://github.com/danielgallagher0/bluetooth-hci" }
bitflags = "1.0"
#cortex-m-semihosting = { version = "0.3.5", features = ["jlink-quirks"] }

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.byteorder]
version = "1"
default-features = false

