[package]
edition = "2018"
name = "stm32wb55"
version = "0.1.0"
authors = ["eupn <eupn@protonmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Interface to STM32WB55 Bluetooth radios"
keywords = ["spi", "bare-metal", "embedded-hal-driver"]
license = "MIT/Apache-2.0"
repository = "https://github.com/eupn/stm32wb55"
readme = "README.md"

[dependencies]
stm32wb-hal = { version = "0.1.1" }
nb = "0.1.1"
bluetooth-hci = { git = "https://github.com/danielgallagher0/bluetooth-hci" }
bitflags = "1.0"
bbqueue = "0.4.8"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.byteorder]
version = "1"
default-features = false

# For examples
[dev-dependencies]
cortex-m = "0.6.2"
stm32wb-pac = "0.2"
as-slice = "0.1"
bit_field = "0.10.0"
heapless = "0.5.3"
nb = "0.1"
cortex-m-rtfm = "0.5"
panic-halt = "0.2.0"
panic-reset = "0.1.0"
panic-semihosting = "0.5.0"
cortex-m-semihosting = { version = "0.3.5", features = ["jlink-quirks"] }
cortex-m-rt = "0.6.6"
usb-device = "0.2"
usbd-serial = "0.1.0"

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true
