[package]
edition = "2018"
name = "stm32wb55"
version = "0.1.0"
authors = ["eupn <eupn@protonmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Interface to STM32WB55 Bluetooth radios"
keywords = ["spi", "bare-metal", "embedded-hal-driver"]
license = "MIT/Apache-2.0"
repository = "https://github.com/eupn/stm32wb55"
readme = "README.md"

[features]
default = ["ms"]

ms = []

[dependencies]
stm32wb-hal = { version = "0.1.14" }
nb = "1.0"
bluetooth-hci = "0.1"
bitflags = "1.3"
bbqueue = "0.4"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.byteorder]
version = "1"
default-features = false

# For examples
[dev-dependencies]
# Need explicit features here
stm32wb-hal = { version = "0.1.14" , features=["xG-package", "stm32-usbd"]}
cortex-m = "0.6.7"
stm32wb-pac = "0.2"
as-slice = "0.2"
bit_field = "0.10"
heapless = "0.7.5"
nb = "1.0"
cortex-m-rtic = "0.5"
panic-halt = "0.2.0"
cortex-m-rt = "0.6.7"
usb-device = "0.2"
usbd-serial = "0.1.0"

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true

[patch.crates-io]
# The Tiwalun demos required this, but we _probably_ don't unless we need those few attributes that were updated
bluetooth-hci = { git = "https://github.com/danielgallagher0/bluetooth-hci", branch = "master" }
